--- a/water_my_plants/package.json
+++ b/water_my_plants/package.json
@@ -9,6 +9,7 @@
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
+    "reactjs-popup": "^1.4.2",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
     "semantic-ui-react": "^0.87.3",
