--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "react-router-dom": "^5.0.1",
+    "reactjs-popup": "^1.4.2",
     "styled-components": "^4.3.2"
   }
 }
